@@ -1,3 +1,8 @@
+Tue Jul 06 13:18:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+	* DAnCE/DAnCE/DAnCE_Utility.cpp:
+	  Fixed memory leak.
+
 Tue Jul 06 12:46:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
 
 	* DAnCE/Config_Handlers/Any_Handler.cpp:
